# automation-framework

./: .dockerignore  .env  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tracking-report.xlsx
automation/: AGENTS.md  __init__.py
automation/api/: app.py  dependencies.py  errors.py  factory.py  locks.py  security.py
automation/api/routes/: __init__.py  health.py  root.py
automation/api/routes/v1/: __init__.py  dinantia.py
automation/api/schemas/: __init__.py  common.py  tracking.py
automation/api/services/: __init__.py  tracking.py
automation/config/: __init__.py  settings.py
automation/core/: __init__.py  browser.py  downloads.py  elements.py  exceptions.py  logger.py  page.py
automation/docs/: adding-a-new-automation.md  architecture.md  authentication-and-sessions.md  development-guide.md  dinantia-tracking.md  documentation-style-guide.md  testing-and-debugging.md
automation/docs/decisions/: ADR-0001—Use-Playwright.md  ADR-0002—Persist-Browser-Sessions.md  ADR-0003—Layered Architecture.md  ADR-0004—Reusable-Download-Infrastructure
automation/models/: __init__.py  tracking.py
automation/portals/: __init__.py
automation/portals/dinantia/: __init__.py  constants.py  detail.py  home.py  login.py  portal.py  tracking.py
automation/workflows/: __init__.py
automation/workflows/dinantia/: __init__.py  authentication.py  tracking_export.py
docs/: adding-a-new-automation.md  api-design.md  architecture.md  authentication-and-sessions.md  deployment.md  development-guide.md  project-status.md  roadmap.md  testing-and-debugging.md
docs/decisions/: 0005-expose-automations-through-fastapi  0006-use-static-bearer-authentication  0007-serialize-browser-automation-execution  0008-use-request-scoped-temporary-downloads  0009-containerized-production-deployment.md
examples/: dinantia_login.py  dinantia_open_home.py  dinantia_open_login.py
infrastructure/: README.md
infrastructure/caddy/: Caddyfile  docker-compose.yml
tests/: test_settings.py  test_tracking_filters.py
tests/api/: test_dinantia_tracking_routes.py  test_tracking_schemas.py
