[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automation-framework"
version = "0.1.0"
description = "Reusable browser automation framework based on Playwright"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "playwright>=1.54.0",
    "pydantic-settings>=2.10.1",
    "rich>=14.0.0",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.hatch.build.targets.wheel]
packages = ["automation"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    ".playwright",
    "downloads",
]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true
files = [
    "automation",
    "examples",
    "tests",
]
exclude = [
    "^\\.playwright/",
    "^downloads/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-ra",
]